--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,8 @@ dependencies = [
     "aiohttp>=3.9.0",
     "requests>=2.31.0",
     "urllib3>=2.0.0",
+    "pandas>=2.0.0",
+    "openpyxl>=3.1.0",
+    "matplotlib>=3.7.0",
+    "networkx>=3.1",
 ]
