Added health check for app and mcp server

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ OLLAMA_MODEL=qwen2.5:14b
 # MCP Server
 MCP_SERVER_HOST=127.0.0.1
 MCP_SERVER_PORT=8765
+
+# Logging (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=DEBUG
